adjusted layout of blog page to ensure footer stuck to bottom

--- a/static/css/tw.css
+++ b/static/css/tw.css
@@ -1445,6 +1445,10 @@ html {
   flex: none;
 }
 
+.flex-grow {
+  flex-grow: 1;
+}
+
 .grid-flow-col {
   grid-auto-flow: column;
 }
